--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,15 +1,18 @@
 {
   "name": "common",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "./types": "./dist/types/index.js",
+    "./metadata": "./dist/metadata/index.js",
+    ".": "./dist/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "exports":{
-    "./types":"./index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "zod": "^4.1.13"
+  }
 }
