--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,18 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "dist",
     "rootDir": ".",
+    "declaration": true,
     "module": "ESNext",
     "target": "ES2020",
-    "declaration": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
+    "moduleResolution": "Bundler",
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "index.ts",
-    "types/**/*",
-    "metadata/**/*"
-  ]
+  "include": ["index.ts", "types", "metadata"]
 }
